@@ -3,6 +3,10 @@ What's New in IDLE 2.6a1?
 
 *Release date: XX-XXX-2008*
 
+- Configured selection highlighting colors were ignored; updating highlighting
+  in the config dialog would cause non-Python files to be colored as if they
+  were Python source; improve use of ColorDelagator.  Patch 1334. Tal Einat.
+
 - ScriptBinding event handlers weren't returning 'break'. Patch 2050, Tal Einat.
 
 - There was an error on exit if no sys.exitfunc was defined. Issue 1647.
